--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
   "description": "Base Level Extension",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": ["storage"],
   "action": {
     "default_popup": "index.html",
     "default_icon": "icon.png"
+  },
+  "background": {
+    "service_worker": "service-worker.js",
+    "type": "module"
   }
 }
