--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,22 @@
   "description": "Protect your eyes with the 20/20/20 rule",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["storage"],
+  "permissions": [
+    "storage",
+    "nativeMessaging",
+    "offscreen",
+    "tabs",
+    "webNavigation"
+  ],
   "action": {
     "default_popup": "index.html",
     "default_icon": "icon.png"
   },
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "./scripts/background.js",
     "type": "module"
   },
-  "minimum_chrome_version": "102",
+  "minimum_chrome_version": "108",
   "icons": {
     "16": "icon.png",
     "32": "icon.png",
