--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "nativeMessaging",
     "offscreen",
     "tabs",
-    "webNavigation"
+    "webNavigation",
+    "notifications"
   ],
   "action": {
     "default_popup": "index.html",
